Cance_link aligning fixed

--- a/From Tutorials/order-summary-component-main/app/css/style.css
+++ b/From Tutorials/order-summary-component-main/app/css/style.css
@@ -75,7 +75,6 @@ p {
   transition: 0.3s; }
 
 .cancel_link {
-  margin-left: 6.5rem;
   text-decoration: none;
   color: #7280a7; }
 
