--- a/From Tutorials/order-summary-component-main/app/scss/_globals.scss
+++ b/From Tutorials/order-summary-component-main/app/scss/_globals.scss
@@ -93,7 +93,6 @@ p {
 }
 
 .cancel_link {
-  margin-left: 6.5rem;
   text-decoration: none;
   color: $desaturatedBlue;
 }
